# techlinter_server

./: Cargo.toml
migrations/2024-04-21-150541_create_users/: up.sql
migrations/2024-04-23-080422_create_logs/: up.sql
src/: apis.rs  db_connector.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: user.html
