[package]
name = "techlinter_server"
version = "0.1.0"
edition = "2021"
default-run = "techlinter_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4"
actix-web = "4"
tera = { version = "1.7.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
thirtyfour = "0.31.0"
clap = { version = "4.0.11", features = ["derive"] }
serde_json = "1.0"
bcrypt

[lib]
name = "techlinter_server"
path = "src/lib.rs"
